@@ -8,7 +8,7 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 3217</build>
+	<build>Build 3222</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
 	<release_date>02.08.2007 - 02:28</release_date>
